# wondercard

./: CMakeLists.txt  Doxyfile  MemoryCardSlot_8hpp.html  MemoryCardSlot_8hpp__incl.md5  MemoryCardSlot_8hpp_source.html  MemoryCard_8hpp.html  MemoryCard_8hpp__dep__incl.map  MemoryCard_8hpp__dep__incl.md5  MemoryCard_8hpp_source.html  README.md  annotated.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCard-members.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCard.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCardSlot-members.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCardSlot.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCardSlot_af64e7a1a3568c94dd39ebb5d878e8992_cgraph.map  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCard_a2723aa5390c1248021e8ed8999098c5e_icgraph.md5  classes.html  common_8hpp.html  common_8hpp__dep__incl.md5  common_8hpp_source.html  dir_000003_000001.html  dir_0610641b4bdab691a6e143ca175d80c1.html  dir_21e1f9da8fbd4d9d2fce75f2f86b7fb6.html  dir_21e1f9da8fbd4d9d2fce75f2f86b7fb6_dep.map  dir_44135e43b3c0847d1faedeeebaf3e73d.html  dir_f26765880d9e1236c88a3248ea19c8e3.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  index.html  main.cpp  namespacecom_1_1saxbophone_1_1wondercard.html  namespacemembers.html  namespacemembers_type.html  namespaces.html
.github/workflows/: build-docs.yml  build-release.yml  continuous-integration.yml
ps1-memcard-protocol/: CMakeLists.txt  Config.cmake.in
ps1-memcard-protocol/include/ps1-memcard-protocol/: MemoryCard.hpp  MemoryCardSlot.hpp  Public.hpp
ps1-memcard-protocol/src/: CMakeLists.txt  MemoryCard.cpp  MemoryCardSlot.cpp  Private.cpp  Private.hpp  Public.cpp
search/: files_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js  typedefs_1.js
tests/: CMakeLists.txt  MemoryCard.cpp  MemoryCardSlot.cpp  example.cpp  test_helpers.hpp
v0.1/: MemoryCardSlot_8hpp.html  MemoryCardSlot_8hpp__incl.map  MemoryCardSlot_8hpp_source.html  MemoryCard_8hpp.html  MemoryCard_8hpp_source.html  annotated.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCard-members.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCard.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCardSlot-members.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCardSlot.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCardSlot_ae09538deec6531a2da447302779d2010_cgraph.md5  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCard__coll__graph.md5  classes.html  common_8hpp.html  common_8hpp__incl.md5  common_8hpp_source.html  dir_000003_000001.html  dir_0610641b4bdab691a6e143ca175d80c1.html  dir_21e1f9da8fbd4d9d2fce75f2f86b7fb6.html  dir_44135e43b3c0847d1faedeeebaf3e73d.html  dir_44135e43b3c0847d1faedeeebaf3e73d_dep.map  dir_f26765880d9e1236c88a3248ea19c8e3.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  index.html  menudata.js  namespacecom_1_1saxbophone_1_1wondercard.html  namespacemembers.html  namespacemembers_type.html  namespaces.html
v0.1.4/: MemoryCardSlot_8hpp.html  MemoryCardSlot_8hpp_source.html  MemoryCard_8hpp.html  MemoryCard_8hpp_source.html  annotated.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCard-members.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCard.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCardSlot-members.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCardSlot.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCard_a420d7d8c0f3322866393638c6890c5f9_icgraph.md5  classes.html  common_8hpp.html  common_8hpp_source.html  dir_000003_000001.html  dir_0610641b4bdab691a6e143ca175d80c1.html  dir_21e1f9da8fbd4d9d2fce75f2f86b7fb6.html  dir_44135e43b3c0847d1faedeeebaf3e73d.html  dir_f26765880d9e1236c88a3248ea19c8e3.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  index.html  namespacecom_1_1saxbophone_1_1wondercard.html  namespacemembers.html  namespacemembers_type.html  namespaces.html
v0.1.4/search/: all_1.js  typedefs_2.js  variables_1.js
v0.1/search/: all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
v0.1/v0.1/: MemoryCardSlot_8hpp.html  MemoryCardSlot_8hpp_source.html  MemoryCard_8hpp.html  MemoryCard_8hpp_source.html  annotated.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCard-members.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCard.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCardSlot-members.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCardSlot.html  classes.html  files.html  (+20 more)
v0.2/: MemoryCardSlot_8hpp.html  MemoryCardSlot_8hpp_source.html  MemoryCard_8hpp.html  MemoryCard_8hpp__incl.md5  MemoryCard_8hpp_source.html  annotated.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCard-members.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCard.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCardSlot-members.html  classcom_1_1saxbophone_1_1wondercard_1_1MemoryCardSlot.html  classes.html  common_8hpp.html  common_8hpp_source.html  dir_000003_000001.html  dir_0610641b4bdab691a6e143ca175d80c1.html  dir_21e1f9da8fbd4d9d2fce75f2f86b7fb6.html  dir_21e1f9da8fbd4d9d2fce75f2f86b7fb6_dep.md5  dir_44135e43b3c0847d1faedeeebaf3e73d.html  dir_f26765880d9e1236c88a3248ea19c8e3.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  index.html  menudata.js  namespacecom_1_1saxbophone_1_1wondercard.html  namespacemembers.html  namespacemembers_type.html  namespaces.html  pages.html  todo.html
wondercard/: CMakeLists.txt  Config.cmake.in
wondercard/include/wondercard/: Generator.hpp  MemoryCard.hpp  MemoryCardSlot.hpp  common.hpp
wondercard/src/: CMakeLists.txt  MemoryCard.cpp  MemoryCardSlot.cpp
(+68 files in other folders)
